--- a/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CABasicAnimationViewController.xib
+++ b/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CABasicAnimationViewController.xib
@@ -24,10 +24,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IuM-Xp-VM8">
-                    <rect key="frame" x="0.0" y="20" width="375" height="372"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="379"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VtO-2r-l2A">
-                            <rect key="frame" x="87.5" y="86" width="200" height="200"/>
+                            <rect key="frame" x="87.5" y="89.5" width="200" height="200"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NKA-bX-xWt">
                                     <rect key="frame" x="10" y="10" width="90" height="90"/>
@@ -80,9 +80,9 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="TV7-P5-8Ax" firstAttribute="top" secondItem="IuM-Xp-VM8" secondAttribute="bottom" constant="8" id="2qZ-0W-5lU"/>
+                <constraint firstItem="TV7-P5-8Ax" firstAttribute="top" secondItem="IuM-Xp-VM8" secondAttribute="bottom" constant="1" id="2qZ-0W-5lU"/>
                 <constraint firstItem="IuM-Xp-VM8" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="9G5-O7-bPN"/>
                 <constraint firstItem="TV7-P5-8Ax" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="G70-Da-tAK"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="IuM-Xp-VM8" secondAttribute="trailing" id="UGw-zP-opg"/>
