--- a/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CASpringAnimation/CASpringAnimationViewController.xib
+++ b/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CASpringAnimation/CASpringAnimationViewController.xib
@@ -27,10 +27,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bwl-do-owe">
-                    <rect key="frame" x="0.0" y="20" width="375" height="298"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="307"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9H-zN-X28">
-                            <rect key="frame" x="127.5" y="89" width="120" height="120"/>
+                            <rect key="frame" x="127.5" y="93.5" width="120" height="120"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1vc-eY-hMh">
                                     <rect key="frame" x="10" y="10" width="50" height="50"/>
@@ -80,53 +80,53 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jdB-fF-aTG">
-                    <rect key="frame" x="0.0" y="319" width="375" height="80"/>
+                    <rect key="frame" x="0.0" y="328" width="375" height="71"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mass" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6xR-hz-snG">
-                            <rect key="frame" x="8" y="8" width="34.5" height="16"/>
+                            <rect key="frame" x="8" y="12" width="34.5" height="16"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8rX-br-Gcw">
-                            <rect key="frame" x="48.5" y="1" width="141" height="31"/>
+                            <rect key="frame" x="48.5" y="5" width="141" height="31"/>
                         </slider>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="stiffness" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGz-VT-upS">
-                            <rect key="frame" x="195.5" y="8" width="57" height="16"/>
+                            <rect key="frame" x="195.5" y="12" width="57" height="16"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="aTq-aA-N6Q">
-                            <rect key="frame" x="258.5" y="1" width="110.5" height="31"/>
+                            <rect key="frame" x="258.5" y="5" width="110.5" height="31"/>
                         </slider>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="damping" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZF-dz-V7U">
-                            <rect key="frame" x="8" y="39" width="57" height="16"/>
+                            <rect key="frame" x="8" y="43" width="57" height="16"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="DVK-S7-Wta">
-                            <rect key="frame" x="71" y="32" width="118.5" height="31"/>
+                            <rect key="frame" x="71" y="36" width="118.5" height="31"/>
                         </slider>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="6xR-hz-snG" firstAttribute="leading" secondItem="jdB-fF-aTG" secondAttribute="leading" constant="8" id="0Fs-4V-2Pd"/>
+                        <constraint firstItem="8rX-br-Gcw" firstAttribute="top" secondItem="jdB-fF-aTG" secondAttribute="top" constant="5" id="2U1-wg-T5a"/>
                         <constraint firstItem="aTq-aA-N6Q" firstAttribute="centerY" secondItem="oGz-VT-upS" secondAttribute="centerY" id="3L2-0P-Zfd"/>
                         <constraint firstItem="aZF-dz-V7U" firstAttribute="leading" secondItem="6xR-hz-snG" secondAttribute="leading" id="5rx-WY-zWn"/>
                         <constraint firstItem="8rX-br-Gcw" firstAttribute="centerY" secondItem="6xR-hz-snG" secondAttribute="centerY" id="BM3-fh-j8l"/>
                         <constraint firstItem="8rX-br-Gcw" firstAttribute="leading" secondItem="6xR-hz-snG" secondAttribute="trailing" constant="8" id="BoQ-Ix-HQk"/>
                         <constraint firstItem="DVK-S7-Wta" firstAttribute="leading" secondItem="aZF-dz-V7U" secondAttribute="trailing" constant="8" id="FGe-x9-VxF"/>
-                        <constraint firstAttribute="height" constant="80" id="Fro-Ie-zzQ"/>
                         <constraint firstItem="DVK-S7-Wta" firstAttribute="trailing" secondItem="8rX-br-Gcw" secondAttribute="trailing" id="Ita-1e-dAW"/>
                         <constraint firstItem="oGz-VT-upS" firstAttribute="centerY" secondItem="6xR-hz-snG" secondAttribute="centerY" id="LZn-BR-x5M"/>
+                        <constraint firstAttribute="bottom" secondItem="DVK-S7-Wta" secondAttribute="bottom" constant="5" id="Srw-pD-wOg"/>
                         <constraint firstAttribute="trailing" secondItem="aTq-aA-N6Q" secondAttribute="trailing" constant="8" id="b2F-eB-6o0"/>
                         <constraint firstItem="oGz-VT-upS" firstAttribute="leading" secondItem="jdB-fF-aTG" secondAttribute="centerX" constant="8" id="hqg-tW-XJ7"/>
                         <constraint firstItem="aZF-dz-V7U" firstAttribute="top" secondItem="8rX-br-Gcw" secondAttribute="bottom" constant="8" id="iny-Vv-Cj5"/>
                         <constraint firstItem="DVK-S7-Wta" firstAttribute="centerY" secondItem="aZF-dz-V7U" secondAttribute="centerY" id="liZ-E7-2em"/>
                         <constraint firstItem="aTq-aA-N6Q" firstAttribute="leading" secondItem="oGz-VT-upS" secondAttribute="trailing" constant="8" id="mFw-30-olt"/>
-                        <constraint firstItem="6xR-hz-snG" firstAttribute="top" secondItem="jdB-fF-aTG" secondAttribute="top" constant="8" id="mKW-cr-RFy"/>
                         <constraint firstAttribute="centerX" secondItem="8rX-br-Gcw" secondAttribute="trailing" id="oPl-5d-LS5"/>
                     </constraints>
                 </view>
