--- a/LearnAnimation/CAAnimation/CATransition/CATrainsitionViewController.xib
+++ b/LearnAnimation/CAAnimation/CATransition/CATrainsitionViewController.xib
@@ -1,13 +1,22 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CATrainsitionViewController">
             <connections>
+                <outlet property="contentView" destination="J81-if-4qe" id="5iV-Fb-erS"/>
+                <outlet property="exampleImageView" destination="fpZ-QV-D9J" id="RrZ-i3-QaD"/>
+                <outlet property="showTypeLabel" destination="Dh2-WY-xsM" id="nzK-WD-JDK"/>
+                <outlet property="showTypeView" destination="Z7i-28-8gX" id="nbl-KO-Mre"/>
+                <outlet property="subTypeSegment" destination="Der-af-RxQ" id="tRi-3S-aXQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +24,79 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J81-if-4qe">
+                    <rect key="frame" x="0.0" y="20" width="375" height="607"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="file" translatesAutoresizingMaskIntoConstraints="NO" id="fpZ-QV-D9J">
+                            <rect key="frame" x="87.5" y="203.5" width="200" height="200"/>
+                        </imageView>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z7i-28-8gX">
+                            <rect key="frame" x="15" y="10" width="345" height="31"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dh2-WY-xsM">
+                                    <rect key="frame" x="151.5" y="5" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" red="1" green="0.76818942410000002" blue="0.327526975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstItem="Dh2-WY-xsM" firstAttribute="centerY" secondItem="Z7i-28-8gX" secondAttribute="centerY" id="8gw-De-gtt"/>
+                                <constraint firstItem="Dh2-WY-xsM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Z7i-28-8gX" secondAttribute="leading" constant="10" id="Qpp-37-OVN"/>
+                                <constraint firstItem="Dh2-WY-xsM" firstAttribute="top" secondItem="Z7i-28-8gX" secondAttribute="top" constant="5" id="RrX-Qp-eqq"/>
+                                <constraint firstItem="Dh2-WY-xsM" firstAttribute="centerX" secondItem="Z7i-28-8gX" secondAttribute="centerX" id="Yay-aa-4Jd"/>
+                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Dh2-WY-xsM" secondAttribute="trailing" constant="10" id="ljP-Us-9jS"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="qxy-lv-ZGh"/>
+                                <constraint firstAttribute="bottom" secondItem="Dh2-WY-xsM" secondAttribute="bottom" constant="5" id="wQz-4n-5ka"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="fpZ-QV-D9J" secondAttribute="bottom" id="6T6-al-kyu"/>
+                        <constraint firstItem="Z7i-28-8gX" firstAttribute="top" secondItem="J81-if-4qe" secondAttribute="top" constant="10" id="8Jd-oW-hAC"/>
+                        <constraint firstItem="fpZ-QV-D9J" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="J81-if-4qe" secondAttribute="leading" id="AGG-zA-GS3"/>
+                        <constraint firstItem="fpZ-QV-D9J" firstAttribute="centerY" secondItem="J81-if-4qe" secondAttribute="centerY" id="EVb-VG-O0N"/>
+                        <constraint firstItem="fpZ-QV-D9J" firstAttribute="top" relation="greaterThanOrEqual" secondItem="J81-if-4qe" secondAttribute="top" id="GOs-YE-wjR"/>
+                        <constraint firstItem="Z7i-28-8gX" firstAttribute="leading" secondItem="J81-if-4qe" secondAttribute="leading" constant="15" id="IgC-ap-St2"/>
+                        <constraint firstAttribute="trailing" secondItem="Z7i-28-8gX" secondAttribute="trailing" constant="15" id="Vb1-fC-usd"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fpZ-QV-D9J" secondAttribute="trailing" id="XMg-M7-y7n"/>
+                        <constraint firstItem="fpZ-QV-D9J" firstAttribute="centerX" secondItem="J81-if-4qe" secondAttribute="centerX" id="piQ-KN-59y"/>
+                    </constraints>
+                </view>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Der-af-RxQ">
+                    <rect key="frame" x="0.0" y="627" width="375" height="41"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="eYL-O0-4Hi"/>
+                    </constraints>
+                    <segments>
+                        <segment title="FromRight"/>
+                        <segment title="FromLeft"/>
+                        <segment title="FromTop"/>
+                        <segment title="FromBottom"/>
+                    </segments>
+                    <connections>
+                        <action selector="selectSubType:" destination="-1" eventType="valueChanged" id="SEg-F8-LPw"/>
+                    </connections>
+                </segmentedControl>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Der-af-RxQ" secondAttribute="trailing" id="73B-i5-bWt"/>
+                <constraint firstItem="J81-if-4qe" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ZNW-d1-9KE"/>
+                <constraint firstItem="Der-af-RxQ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="dkN-LM-VxM"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="J81-if-4qe" secondAttribute="trailing" id="k7K-dk-SCG"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="Der-af-RxQ" secondAttribute="bottom" id="n5f-2u-y4z"/>
+                <constraint firstItem="Der-af-RxQ" firstAttribute="top" secondItem="J81-if-4qe" secondAttribute="bottom" id="qEt-GK-yxx"/>
+                <constraint firstItem="J81-if-4qe" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="xkX-Uc-FIA"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="132" y="154.27286356821591"/>
         </view>
     </objects>
+    <resources>
+        <image name="file" width="200" height="200"/>
+    </resources>
 </document>
